commit desde vs code

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -7,7 +7,7 @@
     <title>Hola Mundillo</title>
 </head>
 <body>
-    <h1>Sitio web mamon</h1>
+    <h1>Sitio web mamon y culero</h1>
     <p>Saludos mi Gente</p>
     <p>Nueva linea para solo ver como hacer push en git</p>
 </body>
